# subpex

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  Makefile  README.md  conda-lock.yml  crc-submit_init.sh  env.sh  environment.yaml  environment.yml  git_diff.sh  init.sh  mkdocs.yml  node.sh  pyproject.toml  run.sh  run.slurm.gpu.sh  run.slurm.sh  subpex.sh  west.cfg  west.h5  wizard.py
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  codecov.yml  deploy-docs.yml  linter.yml  pages.yml
SubPEx-Erich_base/: init.sh  west.cfg
SubPEx-Erich_base/bstates/: bstates.txt
SubPEx-Erich_base/reference/: md.conf
SubPEx-Erich_base/utils/: list_all_pcoords.py  vis_progress.py
SubPEx-Erich_base/westpa_scripts/: bstate.py  gen_istate.sh  get_pcoord.sh  get_reference_fop.py  jdistance.py  pcoord_istate.py  runseg.sh  settings.json
adaptive_binning/: adaptive.py  adaptive.py.orig  driver.py  manager.py  managerWIP.py  outlinesystem.py  uniqueadaptive.py
aux_scripts/: README.md  run.slurm.gpu.sh  run.slurm.sh
aux_scripts/env-crc/: GPU_BENCHMARKS.md  mpi_amber.sh  mpi_namd.sh
bstates/first_conformer/: seg.vel
bstates/first_conformer/temp/: seg_aligned_frame0.xyz
docs/: .pages  gen_ref_pages.py
docs/css/: base.css  colors.css  mkdocstrings.css
docs/tuts/01/: index.md
env-crc/: titan.sh
env-crc-namd/: GPU_BENCHMARKS.md  mpi.sh
istates/1/: 1
job_logs/: README.md
namd_config/: md.conf
prep/equil9/: equil9.conf  equil9.out  mol.psf  system-hc_eq_9.restart.coor  system-hc_eq_9.restart.coor.old  system-hc_eq_9.restart.vel.old  system-hc_eq_9.restart.xsc  system-hc_eq_9.restart.xsc.old  system-hc_eq_9.xsc  system-hc_eq_9.xst
reference/: amber.prod_npt.in  md.conf  mol.inpcrd  namd.md.conf  prod_npt.in  settings.cfg
subpex/: __init__.py  contexts.py  pcoord.py  wizard.py
subpex/configs/: io.py  slurm.py  utils.py
subpex/configs/subpex/: cluster.py  data.py  main.py  pocket.py  sim.py
subpex/configs/westpa/: cli.py  environment.py  executable.py  main.py  system.py
subpex/contexts/: __init__.py  base.py  cluster.py  data.py  main.py  pcoord.py  pocket.py  slurm.py  subpex.py  utils.py  westpa.py
subpex/contexts/subpex/: cluster.py  data.py  main.py  pocket.py
subpex/contexts/westpa/: cli.py  data.py  executable.py  main.py  propagation.py  system.py
subpex/data/: compute.py  io.py  utils.py
subpex/fop/: __init__.py  clean.py  cluster.py  compute.py  gen.py  io.py  prop.py
subpex/pcoord/: compute.py  io.py  jaccard.py
subpex/pocket/: compute.py  detect.py  props.py  selection.py  utils.py
subpex/protein/: compute.py
subpex/scripts/: sp_restart.py  sp_restart.sh
subpex/setup/: __init__.py  render.py  wizard.py
subpex/setup/westpa/: main.py  scripts.py  utils.py
subpex/templates/workload_managers/: job.sbatch
subpex/utils/: clustering.py  spatial.py  vis_progress.py
tests/: conftest.py  test_fop.py  test_pocket_detect.py  test_traj_compute.py  test_westpa_init.py
tests/files/m7g/: .gitignore  equil_frames.nc  equil_npt.nc  equil_npt.rst  mol.nc  mol.prmtop  mol.rst
traj_segs/000001/000000/: FFTW_NAMD_Git-2018-05-06_Linux-x86_64-multicore.txt  (+8 more)
utils/: clust_probabilities.py  clustering.py  concat_all_subpex_frames.sh  concatenate_segments.py  restart_subpex.sh  vis_progress.py
westpa_scripts/: bstate.py  gen_istate.sh  get_pcoord.sh  get_pcoord.sh.orig  get_reference_fop.py  jdistance.py  pcoord.py  pcoord_istate.py  refine_pocket.py  runseg.sh  runseg.sh.orig  settings.json  tar_segs.sh  test.py
westpa_scripts/init_pcoord/: SubPEX_settings  SubPEX_tweaked.py  fix_settings.py  jaccard.sh  jdistance.py
westpa_scripts/pcoord_calc/: SubPEX_settings_pre  SubPEX_tweaked.py  align_traj.py  all_in_one.py  jaccard.sh  jdistance.py  pars_pdb.py  read_me.txt  ref.xyz  settings.json
(+79 files in other folders)
